# plants

./: .gitignore  AGENTS.md  CMakeLists.txt  HTTP_SYNC_GUIDE.md  README.md  dbsync_test_output.txt  default_plant_mapping.md  design_mobile.md  migration_test_output.txt  plant_journal.sqlite  plants_populated.xlsx  read_plant.py  result.txt  trefle_plant_mapping.md
.github/workflows/: ci.yml
android/: AndroidManifest.xml
app/: Main.qml  main.cpp
app/components/: BatchJournalPane.qml  JournalEntryPane.qml  PlantDetailPane.qml  PlantListPane.qml  ReminderPane.qml
core/: JournalEntry.h  Plant.cpp  Plant.h  Reminder.h  ReminderSettings.h
data/: JournalEntryRepository.cpp  JournalEntryRepository.h  MigrationRunner.cpp  MigrationRunner.h  PlantRepository.cpp  PlantRepository.h  ReminderRepository.cpp  ReminderRepository.h  ReminderSettingsRepository.cpp  ReminderSettingsRepository.h
data/database/: SyncServerSettings.h  SyncServerSettingsRepository.cpp  SyncServerSettingsRepository.h  init_postgres.py
data/migrations/: 001_init.sql  002_add_plant_fields.sql  003_reminders_multi.sql  004_add_reminder_name.sql  005_seed_plants.sql
data/sql/plants/: 101_identity_and_location.sql  102_care_profile.sql  103_health_and_source.sql  104_plant_images.sql  105_remove_unused_fields.sql  106_library_fields.sql  107_tags.sql  108_tag_catalog.sql
data/sql/reminders/: 101_settings.sql  102_multi_plant_rework.sql
data/sql/schedules/: 001_plant_care_schedules.sql
data/sql/schema/: 001_plants.sql  002_journal_entries.sql  003_reminders.sql
data/sql/seeds/: 001_plants.sql
data/sql/sync/: 001_sync_metadata.sql  002_tombstone_deletion_timestamps.sql  003_tag_catalog_sync.sql
mobile_app/: Main.qml  main.cpp
mobile_app/pages/: AddPlantLibraryPage.qml  CameraCapturePage.qml  DatabaseConnectionPage.qml  JournalPage.qml  LibraryPage.qml  PlanPage.qml  PlantDetailEditPage.qml  PlantDetailPage.qml  PlantDetailPager.qml  PlantListPage.qml  PlantsPage.qml  RemindersPage.qml  TagManagementPage.qml
mobile_app/pages/details/: GeneralCareSection.qml  GeneralInfoSection.qml  PlantDetailPage.qml  UpdateSection.qml
mobile_app/utils/: CareFrequency.js
project_plan/: design_reminders.md  design_testing.md  project.org  requirements.md  roadmap.md  roadmap_server_integration.md  vision.md
server/: README.md  requirements.txt  start_server.sh
server/app/: config.py  database.py  main.py  schemas.py  service.py
server/sql/: 001_init.sql
server/tests/: test_api.py
services/: DatabaseConnectionViewModel.cpp  DatabaseConnectionViewModel.h  DatabaseSyncService.cpp  DatabaseSyncService.h  JournalEntryListViewModel.cpp  JournalEntryListViewModel.h  PlantLibraryViewModel.cpp  PlantLibraryViewModel.h  PlantListViewModel.cpp  PlantListViewModel.h  ReminderListViewModel.cpp  ReminderListViewModel.h  ReminderScheduler.cpp  ReminderScheduler.h  ReminderSettingsViewModel.cpp  ReminderSettingsViewModel.h  TagCatalogViewModel.cpp  TagCatalogViewModel.h
tests/: CMakeLists.txt  check_seed.py
tests/API/: README.md  garden_api_browser.py  garden_api_client.py  test_garden_api_client.py
tests/API/samples/: astrantia_gbif_detail.json  astrantia_gbif_match.json  astrantia_trefle_detail.json  astrantia_trefle_search.json
tests/core/: test_reminder_scheduler.cpp
tests/data/: test_migration_runner.cpp  test_plant_repository.cpp  test_reminder_repository.cpp
tests/qml/: qmltest_main.cpp  tst_care_frequency.qml  tst_reminder_pane.qml
tests/services/: test_database_sync_service.cpp  test_plant_list_view_model.cpp  test_tag_catalog_view_model.cpp
ui/: AppConstants.qml
